<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/people"
            android:title="@string/menu_people" />
        <item
            android:id="@+id/nav_room"
            android:icon="@drawable/rooms"
            android:title="@string/menu_room" />
    </group>
</menu>